# ecomm-fs

backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs
frontend/: package.json
frontend/src/app/: Header.jsx  layout.js  page.jsx
frontend/src/app/login/: page.jsx
