[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bcrypt = "0.15.0"
bson = "2.7.0"
chrono = "0.4.31"
mongodb = "2.7.0"
serde = "1.0.190"
serde_json = "1.0.107"
